# Contacts

./: CHANGELOG.md  Contacts.cabal  LICENSE
app/: Main.hs
lib/db/: Db.hs
lib/models/: Contact.hs
lib/templates/: ContactTemplates.hs
