cabal-version:      3.0

name:               Contacts
version:            0.1.0.0

synopsis:           Simple CRUD app using HTMX.
-- description:

-- The license under which the package is released.
license:            MIT

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Roni Kettunen

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         ronikettunen96@gmail.com

-- A copyright notice.
-- copyright:
category:           Web
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common commons
    ghc-options:        -Wall
    default-language:   GHC2021
    default-extensions: OverloadedStrings,
                        NoImplicitPrelude

    build-depends:      relude

executable Contacts
    -- Import common warning flags.
    import:           commons

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.0,
                      scotty ^>= 0.20.1,
                      blaze-html ^>= 0.9.1,
                      bytestring ^>= 0.11.4.0,
                      text ^>= 2.0.2

    -- Directories containing source files.
    hs-source-dirs:   app
